NetworkPolicy/backend_ingress_cassandra.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend
  namespace: test
spec:
  podSelector:
    matchLabels:
      run: backend 
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: frontend 
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          ns: cassandra
